/*
 Copyright 2022 The Koordinator Authors.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
*/

syntax = "proto3";
package cachepod.scheduler;
option go_package = "github.com/koordinator-sh/koordinator/apis/cachepod";

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/api/core/v1/generated.proto";

service CachedPodAllocator {
  rpc AllocateCachedPods(AllocateCachedPodsRequest) returns (AllocateCachedPodsResponse) {}
}

message AllocateCachedPodsRequest {
  string requestID = 1;
  k8s.io.api.core.v1.PodTemplateSpec template = 2;
  uint32 replicas = 3;
  k8s.io.apimachinery.pkg.apis.meta.v1.Duration timeout = 4;
}

message AllocateCachedPodsResponse {
  string requestID = 1;
  repeated k8s.io.api.core.v1.Pod pods = 2;
}